deploy/kubernetes/secrets.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fruittreescanner
